--- a/index.html
+++ b/index.html
@@ -300,7 +300,12 @@
         <button id="start-btn" class="btn-start">ابدأ اللعبة</button>
       </div>
       <div id="game-screen" class="hidden">
-        <div id="prize-ladder-container"><ol id="prize-ladder"></ol></div>
+        <div id="prize-ladder-container">
+          <ol
+            id="prize-ladder"
+            style="overflow-x: scroll; scrollbar-color: #e94560 lightblue"
+          ></ol>
+        </div>
         <div class="main-game-area">
           <div class="game-header">
             <div id="helpers-container">
